# embedded-crc-macros-rs

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml
benches/: benchmarks.rs
examples/: crc8.rs  crc8_hasher.rs  crc8_hasher_lookup_table.rs  crc8_lookup_macro.rs
src/: lib.rs
tests/: crc8.rs  crc8_hasher.rs  crc8_hasher_lookup_table.rs  crc8_lookup_table.rs
tests/base/: mod.rs
