[package]
name = "embedded-crc-macros"
version = "0.1.0" # remember to update html_root_url
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/embedded-crc-macros-rs"
license = "MIT OR Apache-2.0"
description = "Macros implementing portable CRC calculation algorithms for use in no_std."
readme = "README.md"
keywords = ["crc", "macro", "checksum", "algorithm"]
categories = ["embedded", "checksum", "no-std"]
homepage = "https://github.com/eldruin/embedded-crc-macros-rs"
documentation = "https://docs.rs/embedded-crc-macros"
include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]
edition = "2018"

[badges]
travis-ci = { repository = "eldruin/embedded-crc-macros-rs", branch = "master" }
coveralls = { repository = "eldruin/embedded-crc-macros-rs", branch = "master", service = "github" }

[[bench]]
name = "benchmarks"
harness = false

[dev-dependencies]
criterion = "0.3"
rand = "0.6" # 0.7 is not compatible with Rust 1.31.0

[profile.bench]
debug = true # for perf
