[package]
name = "embedded-crc-macros"
version = "1.0.0" # remember to update html_root_url
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/embedded-crc-macros-rs"
license = "MIT OR Apache-2.0"
description = "Macros implementing portable CRC calculation algorithms for use in no_std."
readme = "README.md"
keywords = ["crc", "macro", "checksum", "algorithm"]
categories = ["embedded", "algorithms", "no-std"]
homepage = "https://github.com/eldruin/embedded-crc-macros-rs"
documentation = "https://docs.rs/embedded-crc-macros"
include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]
edition = "2018"

[[bench]]
name = "benchmarks"
harness = false

[dev-dependencies]
criterion = { version="0.3.4", features=["html_reports"] }
rand = "0.6" # 0.7 is not compatible with Rust 1.31.0

[profile.bench]
debug = true # for perf
